# surfaceReConstruct2MarchingCube

./: CMakeLists.txt  Readme.md  main.cpp
data/: Point.h  Triangle.cpp  Triangle.h  data.cpp  data.h
gl/: opengl2.cpp  opengl2.h
marchingcube/: marchingcube.cpp  marchingcube.h
opengl4/: Material.cpp  Material.h  opengl.cpp  opengl.h  util.cpp  util.h
useData/: head1.vtk
